force-app/main/default/objects/KimbleOne__MobileNotification__c/KimbleOne__MobileNotification__c.object-meta.xml
<CustomObject>
    <label>Mobile Notification</label>
    <nameField>
        <label>Mobile Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>