force-app/main/default/objects/KimbleOne__MobileNotification__c/fields/KimbleOne__Body__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Body__c</fullName>
    <label>Body</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>