force-app/main/default/objects/KimbleOne__MobileNotification__c/fields/KimbleOne__MobileNotificationType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MobileNotificationType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mobile Notification Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>MobileNotificationType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipName>MobileNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>